# polymarket-arb

./: .dockerignore  .env.docker  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.override.example.yml  docker-compose.yml  docker-entrypoint.sh  polymarket-arb-plan.md
.claude/: settings.json  settings.local.json
config/: .env.example  settings.toml
docs/: MENTION_IMPLEMENTATION_GUIDE.md  WEATHER_STRATEGY_PLAN.md
python-analytics/: requirements.txt
rust-engine/: Cargo.toml
rust-engine/src/: config.rs  error.rs  main.rs
rust-engine/src/api/: binance.rs  clob.rs  gamma.rs  mention_market.rs  mod.rs  polygon.rs  weather_market.rs
rust-engine/src/api/weather/: metar.rs  mod.rs  nws.rs  openmeteo.rs
rust-engine/src/db/: writer.rs
rust-engine/src/execution/: cycle.rs  executor.rs  mod.rs
rust-engine/src/ipc/: README.md  mod.rs  redis_pubsub.rs  sqlite_poller.rs  unix_socket.rs
rust-engine/src/notify/: telegram.rs
rust-engine/src/rate_limit/: token_bucket.rs
rust-engine/src/risk/: capital.rs  circuit_breaker.rs  limits.rs  mod.rs
rust-engine/src/strategy/: dump_hedge.rs  mention_decision.rs  mention_executor.rs  mention_filter.rs  mod.rs  pure_arb.rs  settlement.rs  settlement_reconciler.rs  signal.rs  weather_customized_executor.rs  weather_decision.rs  weather_executor.rs  weather_filter.rs  weather_ladder_executor.rs
rust-engine/src/ws/: market_feed.rs
src/: __init__.py
tools/: approve_contracts.py  backfill_settlements.py  diagnose_paris_apr19.py  setup_credentials.py  status.py  test_tag_slug_fix.py
(+24 files in other folders)
